force-app/main/default/objects/Rate_currency__c/Rate_currency__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Rate currency</label>
</CustomObject>