force-app/main/default/objects/Rate_currency__c/fields/Base_ccy__c.field-meta.xml
<CustomField>
    <fullName>Base_ccy__c</fullName>
    <label>Base ccy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>