force-app/main/default/objects/Rate_currency__c/fields/buy__c.field-meta.xml
<CustomField>
    <fullName>buy__c</fullName>
    <label>buy</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>