force-app/main/default/objects/Rate_currency__c/fields/Ccy__c.field-meta.xml
<CustomField>
    <fullName>Ccy__c</fullName>
    <label>Ccy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>