force-app/main/default/objects/Rate_currency__c/fields/sale__c.field-meta.xml
<CustomField>
    <fullName>sale__c</fullName>
    <label>sale</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>